# cmake-example

./: CMakeLists.txt  README.md  main.cpp
cmake/toolchain/: clang10.cmake
src/foo/: CMakeLists.txt  bar.cpp  bar.h  defines.h  foo.cpp
test/unit/: CMakeLists.txt
test/unit/foo/: CMakeLists.txt  bar.cpp
